force-app/main/default/objects/Membership_Contract__c/Membership_Contract__c.object-meta.xml
<CustomObject>
    <label>Membership Contract</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Membership Contract</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Membership Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>