force-app/main/default/objects/Membership_Contract__c/fields/Account_w_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_w_End_Date__c</fullName>
    <description
  >Hidden field used to sort membership contracts on reports.</description>
    <formula
  >LPAD(TEXT(MONTH(End_Date__c )), 2,&quot;0&quot;)&amp;&quot;-&quot;&amp;
LPAD(TEXT(DAY(End_Date__c )), 2,&quot;0&quot;)&amp;&quot; - &quot;&amp;  Account_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Hidden field used to sort membership contracts on reports.</inlineHelpText>
    <label>Account w End Date</label>
    <type>Text</type>
</CustomField>