force-app/main/default/objects/Membership_Contract__c/fields/Activity_History__c.field-meta.xml
<CustomField>
    <fullName>Activity_History__c</fullName>
    <formula
  >HYPERLINK(&quot;/lightning/r/Report/00O1O0000086hEY/view?fv0=&quot;&amp; Delivery_Contract__r.AccountId ,&quot;Activity History&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity History</label>
    <type>Text</type>
</CustomField>