force-app/main/default/objects/Membership_Contract__c/fields/ACV_Target_All__c.field-meta.xml
<CustomField>
    <fullName>ACV_Target_All__c</fullName>
    <description
  >Used for ACV Target Dash. Overall combined ACV target across all Sub Svcs types.</description>
    <formula>case(MONTH( Start_Date__c),
1,141335,
2,147385,
3,153435,
4,159485,
5,165535,
6,171585,
7,177835,
8,184085,
9,190335,
10,196585,
11,202835,
12,209065,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACV Target (All)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>