force-app/main/default/objects/Membership_Contract__c/fields/ACV_Target_All_SS_Team__c.field-meta.xml
<CustomField>
    <fullName>ACV_Target_All_SS_Team__c</fullName>
    <description
  >Used for ACV Target Dash. Overall combined ACV target for Nav &amp; Insider. &quot;SS&quot; = Sub Svcs Team, these are Dana/Katrina&apos;s combined targets as a team.</description>
    <formula>case(MONTH( Start_Date__c),
1,142984,
2,149105,
3,155226,
4,161346,
5,167467,
6,173587,
7,179910,
8,186233,
9,192556,
10,198879,
11,205202,
12,211505,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACV Target (All, SS Team)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>