force-app/main/default/objects/Membership_Contract__c/fields/ACV_Target_by_Type__c.field-meta.xml
<CustomField>
    <fullName>ACV_Target_by_Type__c</fullName>
    <description
  >Used for ACV Target Dash. Only use one Type at a time in reports.</description>
    <formula>CASE( TEXT(Type__c),

&quot;DGN&quot;,(
case(MONTH( Start_Date__c),
1,63000,
2,65500,
3,68000,
4,70500,
5,73000,
6,75500,
7,78000,
8,80500,
9,83000,
10,85500,
11,88000,
12,90500,
0)),

&quot;DEN&quot;,(
case(MONTH( Start_Date__c),
1,32000,
2,33800,
3,35600,
4,37400,
5,39200,
6,41000,
7,43000,
8,45000,
9,47000,
10,49000,
11,51000,
12,53000,
0)),

&quot;ICA&quot;,(
case(MONTH( Start_Date__c),
1,11835,
2,12335,
3,12835,
4,13335,
5,13835,
6,14335,
7,14835,
8,15335,
9,15835,
10,16335,
11,16835,
12,17315,
0)),

&quot;ITX&quot;,(
case(MONTH( Start_Date__c),
1,17500,
2,18250,
3,19000,
4,19750,
5,20500,
6,21250,
7,22000,
8,22750,
9,23500,
10,24250,
11,25000,
12,25750,
0)),

&quot;IFL&quot;,(
case(MONTH( Start_Date__c),
1,17000,
2,17500,
3,18000,
4,18500,
5,19000,
6,19500,
7,20000,
8,20500,
9,21000,
10,21500,
11,22000,
12,22500,
0)),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Ramp-Up ACV Target by Type. Only use one Type at a time in reports.</inlineHelpText>
    <label>ACV Target (Type)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>