force-app/main/default/objects/Membership_Contract__c/fields/Amount_Renewed__c.field-meta.xml
<CustomField>
    <fullName>Amount_Renewed__c</fullName>
    <description
  >Shows the amount of the contract only if the status of the contract is &quot;Renewed&quot;.</description>
    <formula
  >IF (NOT(ISPICKVAL(Renewal_Status__c,&quot;Expired&quot;)=TRUE),  Total_Income__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Shows the amount of the contract only if the status of the contract is &quot;Renewed&quot;.</inlineHelpText>
    <label>Value Renewed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>