force-app/main/default/objects/Membership_Contract__c/fields/Business_Objective_Sales__c.field-meta.xml
<CustomField>
    <fullName>Business_Objective_Sales__c</fullName>
    <inlineHelpText
  >Data entered by Sales on the General Delivery contract routing regarding why the client is making this purchase, the client goals or ROI expected in purchasing this product/product set from us.</inlineHelpText>
    <label>Business Objective (Sales)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>