force-app/main/default/objects/Membership_Contract__c/fields/Client_Custom_Opt_Out_Text__c.field-meta.xml
<CustomField>
    <fullName>Client_Custom_Opt_Out_Text__c</fullName>
    <formula>Delivery_Contract__r.Client_Custom_Opt_Out_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Custom Opt-Out Text</label>
    <type>Text</type>
</CustomField>