force-app/main/default/objects/Membership_Contract__c/fields/Client_Main_Contact__c.field-meta.xml
<CustomField>
    <fullName>Client_Main_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Main Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>