force-app/main/default/objects/Membership_Contract__c/fields/CSM__c.field-meta.xml
<CustomField>
    <fullName>CSM__c</fullName>
    <formula>Membership_Name__r.CSM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSM</label>
    <type>Text</type>
</CustomField>