force-app/main/default/objects/Membership_Contract__c/fields/Current_ACV__c.field-meta.xml
<CustomField>
    <fullName>Current_ACV__c</fullName>
    <description
  >Annual Contract Value based on the total value and the membership duration.</description>
    <formula>(Total_Value__c /  Membership_Duration__c)*12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Annual Contract Value based on the total value and the membership duration.</inlineHelpText>
    <label>Current ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>