force-app/main/default/objects/Membership_Contract__c/fields/Custom_ROI__c.field-meta.xml
<CustomField>
    <fullName>Custom_ROI__c</fullName>
    <description
  >Only required if requested by sales - delivery can provide a custom ROI summary (e.g. ROI unique to this membership) that will pull into sales reporting</description>
    <inlineHelpText
  >Only required if requested by sales - delivery can provide a custom ROI summary (e.g. ROI unique to this membership) that will pull into sales reporting</inlineHelpText>
    <label>Custom ROI</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>