force-app/main/default/objects/Membership_Contract__c/fields/Delivery_Contract__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipName>Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>