force-app/main/default/objects/Membership_Contract__c/fields/Delivery_Contract_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Contract_Account_ID__c</fullName>
    <formula>Delivery_Contract__r.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Contract Account ID</label>
    <type>Text</type>
</CustomField>