force-app/main/default/objects/Membership_Contract__c/fields/Delivery_Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Contract_Status__c</fullName>
    <formula>TEXT(Delivery_Contract__r.Status)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery Contract Status</label>
    <type>Text</type>
</CustomField>