force-app/main/default/objects/Membership_Contract__c/fields/End_Date_2__c.field-meta.xml
<CustomField>
    <fullName>End_Date_2__c</fullName>
    <description>Repeat of the End Date Field used for reporting.</description>
    <formula>End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Repeat of the End Date Field used for reporting.</inlineHelpText>
    <label>End Date (2)</label>
    <type>Date</type>
</CustomField>