force-app/main/default/objects/Membership_Contract__c/fields/End_Date_Plus_90_Days__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Plus_90_Days__c</fullName>
    <formula>IF(
NOT(
ISBLANK(End_Date__c)
),
End_Date__c + 90,
null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date+90 Days</label>
    <type>Date</type>
</CustomField>