force-app/main/default/objects/Membership_Contract__c/fields/End_Month__c.field-meta.xml
<CustomField>
    <fullName>End_Month__c</fullName>
    <description
  >Displays the first day of the month of the end date, used for reporting.</description>
    <formula>IF(
  End_Date__c = (ADDMONTHS(DATE(YEAR(End_Date__c), MONTH(End_Date__c), 1), 1) - 1),
  /* if End_Date__c is the last day of its month -&gt; first of next month */
  ADDMONTHS(DATE(YEAR(End_Date__c), MONTH(End_Date__c), 1), 1),
  /* else -&gt; first of current month */
  DATE(YEAR(End_Date__c), MONTH(End_Date__c), 1)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Displays the first day of the month of the end date, used for reporting.</inlineHelpText>
    <label>End Month</label>
    <type>Date</type>
</CustomField>