force-app/main/default/objects/Membership_Contract__c/fields/Expiration_Risk_Other__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Risk_Other__c</fullName>
    <inlineHelpText
  >Provide details regarding Expiration/Risk reason</inlineHelpText>
    <label>Expiration/Risk Notes</label>
    <type>TextArea</type>
</CustomField>