force-app/main/default/objects/Membership_Contract__c/fields/Expiration_Risk_Reason__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Risk_Reason__c</fullName>
    <label>Expiration/Risk Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Renewal_Assessment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Dissatisfied with Service Value</fullName>
            </value>
            <value>
                <fullName>Competitive loss</fullName>
                <label>Competitive Loss</label>
            </value>
            <value>
                <fullName>Lack of Funding</fullName>
            </value>
            <value>
                <fullName>Low usage</fullName>
                <label>Low Usage</label>
            </value>
            <value>
                <fullName>Merger/acquisition</fullName>
                <label>Merger / Acquisition</label>
            </value>
            <value>
                <fullName>No longer focused on public sector</fullName>
                <label>No longer focused on Public Sector</label>
            </value>
            <value>
                <fullName>POC Not Engaged</fullName>
            </value>
            <value>
                <fullName>POC Recently Changed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>