force-app/main/default/objects/Membership_Contract__c/fields/Income_Status__c.field-meta.xml
<CustomField>
    <fullName>Income_Status__c</fullName>
    <label>Income Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Needs Finance Review</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>