force-app/main/default/objects/Membership_Contract__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>Plus</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Premier</fullName>
            </value>
            <value>
                <fullName>SMB Basic</fullName>
                <label>Growth - Basic</label>
            </value>
            <value>
                <fullName>Add-On</fullName>
                <isActive>false</isActive>
                <label>Add-On</label>
            </value>
            <value>
                <fullName>Individual Monthly</fullName>
                <isActive>false</isActive>
                <label>Individual Monthly</label>
            </value>
            <value>
                <fullName>Monthly</fullName>
                <isActive>false</isActive>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>Old Nav</fullName>
                <isActive>false</isActive>
                <label>Old Nav</label>
            </value>
            <value>
                <fullName>Techwire</fullName>
                <isActive>false</isActive>
                <label>Techwire</label>
            </value>
            <value>
                <fullName>Umbrella - Premium</fullName>
                <isActive>false</isActive>
                <label>Umbrella - Premium</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>