force-app/main/default/objects/Membership_Contract__c/fields/Membership_Duration__c.field-meta.xml
<CustomField>
    <fullName>Membership_Duration__c</fullName>
    <description>The duration of the contract in months.</description>
    <inlineHelpText>The duration of the contract in months.</inlineHelpText>
    <label>Membership Duration</label>
    <precision>3</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>