force-app/main/default/objects/Membership_Contract__c/fields/Membership_Name__c.field-meta.xml
<CustomField>
    <fullName>Membership_Name__c</fullName>
    <label>Membership Name</label>
    <referenceTo>Membership__c</referenceTo>
    <relationshipLabel>Membership Contracts</relationshipLabel>
    <relationshipName>Membership_Contracts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>