force-app/main/default/objects/Membership_Contract__c/fields/Membership_Status__c.field-meta.xml
<CustomField>
    <fullName>Membership_Status__c</fullName>
    <label>Membership Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Member</fullName>
            </value>
            <value>
                <fullName>Renewing Member</fullName>
            </value>
            <value>
                <fullName>Upgrading Member</fullName>
                <isActive>false</isActive>
                <label>Upgrading Member</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>