force-app/main/default/objects/Membership_Contract__c/fields/Most_Recent_Contract__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Contract__c</fullName>
    <description
  >Checked if the Account fields &quot;DGN/DEN Most Recent Membership&quot; have the same contract as this contract name.</description>
    <formula>OR(
    Membership_Name__r.Account_Name__r.DGN_Most_Recent_Membership__r.Id = Id,
    Membership_Name__r.Account_Name__r.DEN_Most_Recent_Membership__r.Id = Id
)</formula>
    <label>Most Recent Contract</label>
    <type>Checkbox</type>
</CustomField>