force-app/main/default/objects/Membership_Contract__c/fields/Multi_Year__c.field-meta.xml
<CustomField>
    <fullName>Multi_Year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multi-Year</label>
    <type>Checkbox</type>
</CustomField>