force-app/main/default/objects/Membership_Contract__c/fields/Multi_Year_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Multi_Year_End_Date__c</fullName>
    <label>Multi-Year End Date</label>
    <type>Date</type>
</CustomField>