force-app/main/default/objects/Membership_Contract__c/fields/NAV_Member_Engagement__c.field-meta.xml
<CustomField>
    <fullName>NAV_Member_Engagement__c</fullName>
    <description
  >Previously used to display the Membership Engagement Coordinator from the Membership. 

In process of removal. Replacement field is User Lookup pushed from Account with a flow. - LF</description>
    <formula>Membership_Name__r.NAV_Member_Engagement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Engagement Rep</label>
    <type>Text</type>
</CustomField>