force-app/main/default/objects/Membership_Contract__c/fields/NAV_Member_Engagement_User__c.field-meta.xml
<CustomField>
    <fullName>NAV_Member_Engagement_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member Engagement Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NAV_MEC_Membership_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>