force-app/main/default/objects/Membership_Contract__c/fields/of_User_Licenses__c.field-meta.xml
<CustomField>
    <fullName>of_User_Licenses__c</fullName>
    <label># of User Licenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>