force-app/main/default/objects/Membership_Contract__c/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <formula
  >Delivery_Contract__r.Sales_Rep_Contracts__r.FirstName &amp; &quot; &quot; &amp;  Delivery_Contract__r.Sales_Rep_Contracts__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >The Sales Rep from the related Delivery Contract record.</inlineHelpText>
    <label>Opportunity Owner</label>
    <type>Text</type>
</CustomField>