force-app/main/default/objects/Membership_Contract__c/fields/Pre_Start_Date_Active__c.field-meta.xml
<CustomField>
    <fullName>Pre_Start_Date_Active__c</fullName>
    <description
  >Used in Workflow Rule to trigger Stage to move from Not Started to Active on the Membership Start Date.</description>
    <formula>Start_Date__c - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pre-Start Date</label>
    <type>Date</type>
</CustomField>